# chronos-seat

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Developer-Quickstart-ChronosSeat.md  README.md  chronos-seat-blueprint.md  chronos-seat-developer-quickstart.md  chronos-seat-roadmap.md  main.py  pyproject.toml  workspace.yaml
.github/workflows/: ci.yml
dagster_home/: dagster.yaml
dagster_home/history/: runs.db
dagster_home/history/runs/: 1abec73c-f2b1-4bb9-8c93-2755f0f5f7ff.db  index.db
dagster_home/schedules/: schedules.db
dagster_home/storage/: mock_contractor_tracking  mock_erp_roster  mock_hr_allocations
dagster_home/storage/1abec73c-f2b1-4bb9-8c93-2755f0f5f7ff/compute_logs/: aldrvcdh.err  dvqusyqg.err  kigiahui.err
data/raw/2026-06-16/: contractor_tracking_20260616_183039.xlsx  erp_roster_20260616_183039.csv  hr_allocations_20260616_183039.parquet
dbt_project/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt_project/macros/: generate_schema_name.sql  generate_sk.sql  initcap.sql  mock_first_names.sql  mock_last_names.sql
dbt_project/models/bronze/: contractor_tracking.sql  erp_roster.sql  hr_allocations.sql
dbt_project/models/gold/: bridge_position_occupancy.sql  dim_date.sql  dim_employee.sql  dim_position.sql  schema.yml
dbt_project/models/marts/: bridge_position_occupancy.sql  dim_date.sql  dim_employee.sql  dim_position.sql  fact_position_occupancy_event.sql  schema.yml
dbt_project/models/silver/: stg_contractor_tracking.sql  stg_erp_roster.sql  stg_hr_allocations.sql
dbt_project/models/staging/: stg_contractor_tracking.sql  stg_erp_roster.sql  stg_hr_allocations.sql
dbt_project/seeds/: dim_change_reason.csv  dim_change_type.csv  dim_department.csv
dbt_project/seeds/bronze/: departments.csv  positions.csv
dbt_project/seeds/gold/: dim_change_reason.csv  dim_change_type.csv  dim_departments.csv
rill_dashboard/: rill.yaml
rill_dashboard/connectors/: clickhouse.yaml
src/chronos_seat/: definitions.py
src/chronos_seat/defs/ingestion/rawgen/: assets.py  resources.py
src/chronos_seat/defs/transformation/adhoc/: assets.py
src/chronos_seat/defs/transformation/dbt/: assets.py  project.py  resources.py
