[project]
name = "chronos_seat"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "clickhouse-connect>=1.3.0",
    "dagster==1.13.10",
    "dagster-clickhouse>=0.29.10",
    "dagster-dbt>=0.29.10",
    "dagster-webserver>=1.13.10",
    "dbt-clickhouse>=1.10.1",
    "dbt-core>=1.11.11",
    "faker>=40.23.0",
    "openpyxl>=3.1.5",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "dagster-webserver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

# ============================================================
# Dagster DG CLI — project type and module registration.
# `dg` uses this to know where your Dagster code lives.
# ============================================================
[tool.dg]
directory_type = "project"     # Tells `dg` this is a Dagster project (not a workspace)

[tool.dg.project]
root_module = "chronos_seat"   # Python module where definitions.py lives
registry_modules = [
    "chronos_seat.components.*",  # Auto-discover Dagster components in this namespace
]

# ============================================================
# Ruff — Python linter + formatter config.
# ============================================================
[tool.ruff]
target-version = "py313"       # Generate Python 3.13-compatible code (walrus operator, etc.)
line-length = 100              # Max line length: matches Dagster community style

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors: indentation, whitespace, syntax issues
    "F",   # PyFlakes: unused imports, undefined names, logic errors
    "I",   # isort: import ordering and grouping
    "N",   # pep8-naming: class/function/variable naming conventions
    "W",   # pycodestyle warnings: trailing whitespace, blank line issues
    "UP",  # pyupgrade: modernize syntax (e.g., str.format → f-strings)
]

# ============================================================
# Pytest — test runner config.
# ============================================================
[tool.pytest.init_options]
testpaths = ["tests"]          # Directory where pytest discovers test files
